Use a local Express server Update everything so that we're using a local Express server, and make the whole thing more self-contained. Also remove some of the requires for it to run on my local machine and hopefully make it a bit more portable.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "WROPE",
   "version": "1.0.0",
   "description": "An experiment creating a river of posts, based on the WordPress REST API",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/beaulebens/WROPE",
   "dependencies": {
     "backbone": "^1.1.2",
+    "express": "^4.10.0",
     "jquery": "^2.1.1",
     "photon": "^1.0.2"
   }
